crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(2.0, 1.0);"
---
SelectStmt@0..26
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..15 "numrange"
      Ascii40@15..16 "("
      AConst@16..19
        Fconst@16..19 "2.0"
      Ascii44@19..20 ","
      Whitespace@20..21 " "
      AConst@21..24
        Fconst@21..24 "1.0"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

