crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(2.0, 3.0) -|- numrange(3.0, 4.0);"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    AExpr@7..47
      FuncCall@7..24
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "2.0"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "3.0"
      Ascii41@24..25 ")"
      Whitespace@25..26 " "
      Op@26..29 "-|-"
      Whitespace@29..30 " "
      FuncCall@30..47
        Ident@30..38 "numrange"
        Ascii40@38..39 "("
        AConst@39..42
          Fconst@39..42 "3.0"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..47
          Fconst@44..47 "4.0"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

